force-app/main/default/objects/Shipment__c/fields/ContactShipping__c.field-meta.xml
<CustomField>
    <fullName>ContactShipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Shipping</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipments (Contact Shipping)</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>