force-app/main/default/objects/Shipment__c/fields/DateEstimatedDelivery__c.field-meta.xml
<CustomField>
    <fullName>DateEstimatedDelivery__c</fullName>
    <label>Date Estimated Delivery</label>
    <type>Date</type>
</CustomField>