force-app/main/default/objects/Shipment__c/fields/Lines__c.field-meta.xml
<CustomField>
    <fullName>Lines__c</fullName>
    <label>Shipment Line Count</label>
    <summaryForeignKey>ShipmentLine__c.Shipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>