force-app/main/default/objects/Shipment__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Total Shipment Line Count</label>
    <summarizedField>ShipmentLine__c.Packages__c</summarizedField>
    <summaryForeignKey>ShipmentLine__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>