force-app/main/default/objects/Shipment__c/fields/ShippingCost__c.field-meta.xml
<CustomField>
    <fullName>ShippingCost__c</fullName>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>