force-app/main/default/objects/Shipment__c/listViews/Scheduled.listView-meta.xml
<ListView>
    <fullName>Scheduled</fullName>
    <columns>NAME</columns>
    <columns>ShipmentDate__c</columns>
    <columns>RecordStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordStatus__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Scheduled</label>
</ListView>